--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -1,7 +1,6 @@
 .contactPage {
   display: flex;
   flex-direction: column;
-  background-color: var(--bg-color);
   padding-bottom: 120px;
 }
 
