--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,6 @@
 .main {
   display: flex;
   flex-direction: column;
-  background-color: var(--bg-color);
 }
 
 /* Sections General */
