--- a/src/app/services/services.module.css
+++ b/src/app/services/services.module.css
@@ -1,7 +1,6 @@
 .servicesPage {
   display: flex;
   flex-direction: column;
-  background-color: var(--bg-color);
   padding-bottom: 120px;
 }
 
@@ -182,13 +181,13 @@
 }
 
 .teamCard1 {
-  background-image: url('../../../public/assets/service_bg_1.png');
+  background-image: url('/assets/service_bg_1.png');
 }
 .teamCard2 {
-  background-image: url('../../../public/assets/service_bg_2.png');
+  background-image: url('/assets/service_bg_2.png');
 }
 .teamCard3 {
-  background-image: url('../../../public/assets/service_bg_3.png');
+  background-image: url('/assets/service_bg_3.png');
 }
 
 /* Intro Text */
